[WCMSFEQ-904] Fixed CTHP Accordion overflow

--- a/CancerGov/_src/Scripts/NCI/Modules/accordion/_accordion.scss
+++ b/CancerGov/_src/Scripts/NCI/Modules/accordion/_accordion.scss
@@ -175,8 +175,8 @@
 	//}
 	// Cancer Type Home Page accordion spacing 
 	.cgvcancertypehome .ui-accordion .ui-accordion-header {
-		margin-left: -32px;
-		margin-right: -32px;
+		margin-left: -30px;
+		margin-right: -30px;
 	}
 	.cgvcancertypehome .ui-accordion .ui-accordion-content {
 		margin-left: -12px;
